# rtc

./: .gitignore  LICENSE  Makefile  README.md  canvas.go  canvas_test.go  color.go  go.mod  main.go  matrix.go  matrix_test.go  objects.go  objects_test.go  primitive.go  primitive_test.go  raytracer  transform.go  transform_test.go  util.go  util_test.go
Raytracer/: Raytracer.cabal  package.yaml  stack.yaml
Raytracer/src/: PV.hs
Raytracer/test/: Spec.hs
c/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  demo_canvas.ppm  main.c  monitor  test.c
c/demo/: demo_canvas.c  demo_canvas.h  demo_primitives.c  demo_primitives.h
c/include/: canvas.h  matrix.h  primitives.h  resource.h  say_hello.h  util.h
c/src/: canvas.c  matrix.c  primitives.c  resource.c  say_hello.c  tuples.c  tuples.h  util.c  utils.h
c/test/: test_canvas.h  test_helpers.h  test_matrix.h  test_primitives.h  test_tracer.c
haskell/: LICENSE  README.md  count.sh  newmodule.sh  tracer.cabal
haskell/demo/: DemoCanvas.hs  DemoLight.hs  DemoRay.hs  DemoTransform.hs
haskell/exe/: Main.hs
haskell/rtc/: ChangeLog.md  package.yaml  rtc.cabal
haskell/rtc/app/: Main.hs
haskell/rtc/src/: Cli.hs  Size.hs  SquareRoot.hs  Tuple.hs
haskell/rtc/src/Demo/: TupleDemo.hs
haskell/rtc/test/: TupleSpec.hs
haskell/src/: Canvas.hs  Color.hs  Light.hs  Material.hs  Matrix.hs  Point.hs  Ray.hs  Sphere.hs
haskell/test/: Test.hs  TestSphere.hs  TestTransform.hs
py/: Makefile  main.py  test.py
python/: demo.py  test.py  tuples.py  utils.py
src/: color_test.go  primitive_test.go  util_test.go
tracer/: .ghci  .gitignore  CHANGELOG.md  Makefile  tracer.cabal  tracer.ps
tracer/demo/: DemoLight.hs  DemoPoint.hs  DemoRay.hs
tracer/exe/: Main.hs
tracer/src/: Canvas.hs  Color.hs  Light.hs  Matrix.hs  Point.hs  Primitive.hs  Ray.hs  Sphere.hs  Tracer.hs  Transform.hs  Util.hs
tracer/test/: Test.hs  TestCanvas.hs  TestColor.hs  TestLight.hs  TestMaterial.hs  TestMatrix.hs  TestPoint.hs  TestPrimitive.hs  TestRay.hs  TestSphere.hs  TestTransform.hs  TestUtil.hs
